1. Метод .of [#70623 #381080]